// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Router index Config should be rendered 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
</Router>
`;

exports[`Router index Config should be rendered without layout 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Route
    path="/test/"
    render={[Function]}
  />
</Router>
`;

exports[`Router index should be rendered 1`] = `
<BrowserRouter>
  <Index>
    <Switch>
      <RouteWithSubRoutes
        component={[Function]}
        exact={true}
        key="/"
        path="/"
      />
      <RouteWithSubRoutes
        component={[Function]}
        key="/child/:id"
        path="/child/:id"
      />
      <Route
        component={[Function]}
      />
    </Switch>
  </Index>
</BrowserRouter>
`;
